--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -6,48 +6,57 @@
     android:layout_height="match_parent"
     tools:context="com.example.jason.sagy.Grid"
     android:background="@color/green">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
-        android:layout_height="270dp"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="150dp">
+
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing"
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            app:layout_scrollFlags="exitUntilCollapsed|scroll"
+            android:layout_height="200dp"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginStart="48dp"
             app:expandedTitleMarginEnd="64dp"
-            android:background="@drawable/collapse"
-            >
+            app:expandedTitleMarginStart="48dp"
+            app:layout_scrollFlags="exitUntilCollapsed|scroll">
+            <com.daimajia.slider.library.SliderLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:id="@+id/slider">
+            </com.daimajia.slider.library.SliderLayout>
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
+
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="647dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:layout_editor_absoluteY="200dp">
 
-        <LinearLayout
-            android:orientation="vertical"
-            xmlns:tools="http://schemas.android.com/tools"
+        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context="com.example.hrithu.sagy.Main2Activity"
+            android:gravity="center"
+            android:orientation="vertical"
             android:padding="10dp"
 
-            android:gravity="center">
+            tools:context="com.example.hrithu.sagy.Main2Activity">
+
             <LinearLayout
-                android:clipToPadding="false"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:gravity="center">
+
                 <android.support.v7.widget.CardView
                     android:layout_width="160dp"
                     android:layout_height="110dp"
@@ -77,6 +86,7 @@
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
+
                 <android.support.v7.widget.CardView
                     android:layout_width="160dp"
                     android:layout_height="110dp"
@@ -90,12 +100,11 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:background="@drawable/village"
-
                             android:layout_width="55dp"
+
                             android:layout_height="55dp"
-                            android:padding="10dp"
-                            />
+                            android:background="@drawable/village"
+                            android:padding="10dp" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -108,11 +117,13 @@
                 </android.support.v7.widget.CardView>
 
             </LinearLayout>
+
             <LinearLayout
-                android:clipToPadding="false"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:gravity="center">
+
                 <android.support.v7.widget.CardView
                     android:layout_width="160dp"
                     android:layout_height="110dp"
@@ -127,12 +138,11 @@
 
                         <ImageView
                             android:layout_width="55dp"
-                            android:background="@drawable/notifications"
-
-
                             android:layout_height="55dp"
-                            android:padding="10dp"
-                            />
+
+
+                            android:background="@drawable/notifications"
+                            android:padding="10dp" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -142,6 +152,7 @@
                             android:textStyle="bold" />
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
+
                 <android.support.v7.widget.CardView
                     android:layout_width="160dp"
                     android:layout_height="110dp"
@@ -156,11 +167,10 @@
 
                         <ImageView
                             android:layout_width="55dp"
-                            android:background="@drawable/schemes"
-
                             android:layout_height="55dp"
-                            android:padding="10dp"
-                             />
+
+                            android:background="@drawable/schemes"
+                            android:padding="10dp" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -172,12 +182,14 @@
                 </android.support.v7.widget.CardView>
 
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/sagy"
-                android:clipToPadding="false"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:gravity="center">
+
                 <android.support.v7.widget.CardView
                     android:layout_width="160dp"
                     android:layout_height="110dp"
@@ -209,30 +221,33 @@
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
+
                 <android.support.v7.widget.CardView
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="10dp">
+
                     <LinearLayout
                         android:id="@+id/gallery"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
+
                         <ImageView
                             android:layout_width="50dp"
-                            android:background="@drawable/gallery1"
-
                             android:layout_height="50dp"
 
-                            android:padding="10dp"
-                            />
+                            android:background="@drawable/gallery1"
+
+                            android:padding="10dp" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textStyle="bold"
                             android:layout_marginTop="10dp"
-                            android:text="Gallery"/>
+                            android:text="Gallery"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
@@ -240,10 +255,11 @@
             </LinearLayout>
 
             <LinearLayout
-                android:clipToPadding="false"
-                android:gravity="center"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:gravity="center">
+
                 <android.support.v7.widget.CardView
                     android:layout_width="160dp"
                     android:layout_height="110dp"
@@ -275,30 +291,33 @@
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
+
                 <android.support.v7.widget.CardView
                     android:layout_width="160dp"
                     android:layout_height="110dp"
                     android:layout_margin="10dp">
+
                     <LinearLayout
                         android:id="@+id/im8"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="vertical"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
+
                         <ImageView
                             android:layout_width="50dp"
-                            android:background="@drawable/logout"
-
                             android:layout_height="50dp"
 
-                            android:padding="10dp"
-                            />
+                            android:background="@drawable/logout"
+
+                            android:padding="10dp" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textStyle="bold"
                             android:layout_marginTop="10dp"
-                            android:text="Logout"/>
+                            android:text="Logout"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
