--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,6 +124,15 @@
             android:layout_centerHorizontal="true"
             android:visibility="gone" />
 
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button4"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone" />
+
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="60dp"
