--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -277,7 +277,7 @@
                             android:layout_height="55dp"
 
 
-                            android:background="@drawable/organisation"
+                            android:background="@drawable/ic_collaboration"
 
                             android:padding="10dp" />
 
@@ -285,7 +285,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
-                            android:text="Organisation Associated"
+                            android:text="Team"
                             android:textAlignment="center"
                             android:textStyle="bold" />
 
