--- a/app/src/main/res/layout/gallery_thumbnail.xml
+++ b/app/src/main/res/layout/gallery_thumbnail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -9,5 +9,13 @@
         android:id="@+id/thumbnail"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:adjustViewBounds="true" />
-</android.support.design.widget.CoordinatorLayout>
+        android:adjustViewBounds="true"
+        android:src="@mipmap/ic_launcher"/>
+    <TextView
+        android:id="@+id/title"
+        android:text="Yugandar"
+        android:layout_gravity="bottom|center"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        />
+</LinearLayout>
